second day commit

--- a/css/master.css
+++ b/css/master.css
@@ -46,7 +46,7 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+/* header */
 a {
   text-decoration: none;
 }
@@ -79,4 +79,13 @@ nav {
   font-size: 20px;
   font-weight: bold;
   font-family: 'timeburner_regular';
+}
+/* メインビジュアル */
+.main-visual {
+  height: 100vh;
+  background: url(../images/main_visual.jpg) no-repeat;
+  background-size: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
